css, page changes

--- a/web/site/views/eventDetails.hbs
+++ b/web/site/views/eventDetails.hbs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
      <link rel="stylesheet" type="text/css" href="/site/css"/>
+     <title>Event Details</title>
 </head>
 <body>
     <nav>
