--- a/web/site/views/groups.hbs
+++ b/web/site/views/groups.hbs
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="/site/css"/>
+  <title>User Groups</title>
 </head>
 <body>
 
@@ -133,7 +134,7 @@
     groupDescription.style.display = groupDescription.style.display === 'none' ? 'block' : 'none';
     editForm.style.display = editForm.style.display === 'none' ? 'block' : 'none';
   }
-  
+
 </script>
 
 </body>
