--- a/web/site/views/searchResult.hbs
+++ b/web/site/views/searchResult.hbs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Search Results</title>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="/site/css"/>
   <nav>
