--- a/web/site/css/secaSite.css
+++ b/web/site/css/secaSite.css
@@ -36,13 +36,23 @@ body {
     background-color: #fff; 
   }
 
+  
+
   .search-container {
+    text-align: center;
     background-color: #f0f0f0;
     padding: 10px;
-    margin: 10px 0;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   }
+
+
+  .checkmark {
+    height: 20px;
+    width: 20px;
+    background-color: #eee;
+  }
+
   
   .group-name {
     margin-left: 5px;
@@ -66,7 +76,7 @@ body {
   }
 
   .bottom-buttons {
-    margin: 5px;
+    margin-bottom: 5px;
     display: inline-flex;
   }
   
@@ -87,7 +97,8 @@ body {
   }
 
   select {
-    width: 50%;
+    text-align: center;
+    width: fit-content;
     padding: 16px 20px;
     border-radius: 4px;
     background-color: #f1f1f1;
