--- a/web/site/views/partials/event.hbs
+++ b/web/site/views/partials/event.hbs
@@ -10,7 +10,7 @@
                 <p>Segment: {{segment}}</p>
             {{/if}}
         <div class="bottom-buttons">
-        <form id="nameForm" action="event" method="GET">
+        <form id="nameForm" action="/site/event" method="GET">
             <input type="hidden" name="id" value="{{id}}">
             <input type="submit" value="More Details...">
         </form>
