--- a/web/site/views/searchResult.hbs
+++ b/web/site/views/searchResult.hbs
@@ -15,9 +15,8 @@
 {{else}}
   <div class="events">
     {{#each events}}
-      {{> eventResult}}
+      {{> event}}
     {{/each}}
-
   </div>
 {{/if}}
 
