--- a/web/site/views/partials/nav.hbs
+++ b/web/site/views/partials/nav.hbs
@@ -2,9 +2,9 @@
     <a href="/site/home">Home</a>
     <a href="/site/search">Search Events</a>
     <a href="/site/groups">Groups</a>
-    <a href="/site/login" id="registerLink" style="display:none">Login</a>
-    <a href="/site/register" id= "loginLink" style="display:none">Register</a>
-    <form id="logoutForm" action="/site/logout" method="post" style="display:none">
-      <button type="submit">Logout</button>
+    <a href="/site/login" id="registerLink">Login</a>
+    <a href="/site/register" id= "loginLink">Register</a>
+    <form id="logoutForm" action="/site/logout" method="post">
+      <button type="submit">Log Out</button>
     </form>
 </nav>
